--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
-  <title>home</title>
+  <title>Home Page</title>
   <style>
     body {
       background: linear-gradient(180deg, #360000, black);
-      font-family: Assistant, sans-serif;
+      font-family: "Monaco", monospace;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -19,7 +19,7 @@
       color: white;
       text-align: center;
       margin: 10px 0 30px;
-      font-size: 35px;
+      font-size: 40px;
     }
 
     .text {
@@ -28,6 +28,7 @@
       margin-bottom: 40px;
       text-align: center;
       font-weight: bold;
+      font-family: "Monaco", monospace;
     }
 
     @keyframes fadeInUp {
@@ -72,12 +73,13 @@
       padding: 12px 30px;
       border: none;
       border-radius: 6px;
-      font-size: 18px;
+      font-size: 20px;
       cursor: pointer;
-      font-weight: bold;
+      //font-weight: bold;
       text-align: center;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      font-family: "Monaco", monospace;
     }
 
     .button:hover {
