--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,7 @@
 <body>
 
   <h2>SMCS Symposium Scheduler</h2>
+  <img src="logoss.png" alt="Logo" width="200" height="200">
 
   <div id="logoContainer">
     <div class="text">
