--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
       border-radius: 6px;
       font-size: 20px;
       cursor: pointer;
-      //font-weight: bold;
+      font-weight: bold;
       text-align: center;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
