--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
-  <title>Home Page</title>
+  <title>Home</title>
   <style>
     body {
       background: linear-gradient(180deg, #360000, black);
