--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
 <body>
 
   <h2>SMCS Symposium Scheduler</h2>
-  <img src="logoss.png" alt="Logo" width="200" height="200">
+  <img src="https://imgur.com/4IWYffJ.png" alt="Logo" width="200" height="200">
 
   <div id="logoContainer">
     <div class="text">
