--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -64,7 +64,7 @@
     }
 
     .upload-label:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
     }
 
     .upload input[type="file"] {
@@ -106,6 +106,7 @@
       font-weight: bold;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      font-family: "Monaco", monospace;
     }
 
     button:hover {
@@ -166,10 +167,6 @@
       color: red;
       border-bottom: none;
     }
-
-    .dropdown a:hover {
-      background-color: #ccc;
-    }
     
     .file-name {
     	height: 50px;
@@ -201,10 +198,6 @@
   font-size: 17px;
 }
 
-/* Change background color of buttons on hover */
-.tab button:hover {
-}
-
 /* Create an active/current tablink class */
 .tab button.active {
   background-color: #a25050ff;
@@ -230,11 +223,6 @@
   border: 1px solid #ddd;
   padding: 8px;
 }
-
-#seniorTable tr, #juniorTable tr { background-color: white; 
-border-radius: 6px;}
-#seniorTable tr:hover, #juniorTable tr:hover { background-color: #ddd; 
-border-radius: 6px;}
 
 #seniorTable th, #juniorTable th {
   padding-top: 12px;
