--- a/templates/index.html
+++ b/templates/index.html
@@ -1,126 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home</title>
+  <title>Access Denied</title>
   <style>
-    body {
-      background: linear-gradient(180deg, #360000, black);
-      font-family: "Monaco", monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin: 0;
-      height: 100vh;
-    }
+ body {
+  background-attachment: fixed;
+  background: linear-gradient(180deg,  #360000 , black);
+  font-family: "Monaco", monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  height: 100vh;
+}
 
-    h2 {
-      color: white;
-      text-align: center;
-      margin: 10px 0 30px;
-      font-size: 40px;
-    }
+h2, h3 {
+  color: white;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
 
-    .text {
-      color: white;
-      font-size: 24px;
-      margin-bottom: 40px;
-      text-align: center;
-      font-weight: bold;
-      font-family: "Monaco", monospace;
-    }
+.login-button {
+  background-color: #B51111;
+  color: white;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 6px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  align-items: center;
+  font-family: "Monaco", monospace;
+  font-weight: bold;
+  margin-top: 20px;
+}
 
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .button-wrapper {
-      opacity: 0;
-      animation: fadeInUp 0.6s ease forwards;
-      animation-fill-mode: forwards;
-      margin: 10px;
-    }
-
-    .button-wrapper:nth-child(1) {
-      animation-delay: 0.3s;
-    }
-
-    .button-wrapper:nth-child(2) {
-      animation-delay: 0.6s;
-    }
-
-    .button-wrapper:nth-child(3) {
-      animation-delay: 0.9s;
-    }
-
-    .button {
-      background-color: #B51111;
-      color: white;
-      padding: 12px 30px;
-      border: none;
-      border-radius: 6px;
-      font-size: 20px;
-      cursor: pointer;
-      font-weight: bold;
-      text-align: center;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      font-family: "Monaco", monospace;
-    }
-
-    .button:hover {
-      transform: scale(1.13);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    }
+.login-button:hover {
+  transform: scale(1.15);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+}
+.my-image {
+  width: 150px;
+  height: auto;
+  border-radius: 10px;
+}
+    
   </style>
-</head>
-<body>
+  </head>
+  
+  <body>
 
-  <h2>SMCS Symposium Scheduler</h2>
-  <img src="https://imgur.com/4IWYffJ.png" alt="Logo" width="200" height="200">
-
-  <div id="logoContainer">
-    <div class="text">
-      <div>CAPSLocked</div>
-    </div>
-  </div>
-
-  <div class="button-container">
-    <div class="button-wrapper">
-      <button class="button" onclick="wsp()">Log In</button>
-    </div>
-    <div class="button-wrapper">
-      <button class="button" onclick="wsp2()">Generate schedules from spreadsheet</button>
-    </div>
-    <div class="button-wrapper">
-      <button class="button" onclick="wsp3()">Improvements Form</button>
-    </div>
-  </div>
-
+  <h2>ACCESS DENIED</h2>
+  <h3>Quit burning daylight. You don't got the CS in SMCS.</h3>
+  <button class="login-button" id="login"  onclick="wsp()">Back</button>
+  
   <script>
     function wsp() {
-      window.location.href = '/login';
-    }
-
-    function wsp2() {
-      window.location.href = '/upload';
-    }
-
-    function wsp3() {
-      window.location.href = '/bugreport';
+      window.location.href='/';
     }
   </script>
 
