--- a/templates/accessdenied.html
+++ b/templates/accessdenied.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
-  <title>access denied</title>
+  <title>Access Denied</title>
   <style>
  body {
-  
-  height: 100%;
   background-attachment: fixed;
   background: linear-gradient(180deg,  #360000 , black);
-  font-family: Assistant, sans-serif;
+  font-family: "Monaco", monospace;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0;
-  height: 100vh; /* full viewport height */
+  height: 100vh;
 }
 
 h2, h3 {
@@ -36,6 +33,9 @@ h2, h3 {
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   align-items: center;
+  font-family: "Monaco", monospace;
+  font-weight: bold;
+  margin-top: 20px;
 }
 
 .login-button:hover {
@@ -53,7 +53,7 @@ h2, h3 {
   
   <body>
 
-  <h2>ACCESS DENIED.</h2>
+  <h2>ACCESS DENIED</h2>
   <h3>Quit burning daylight. You don't got the CS in SMCS.</h3>
   <button class="login-button" id="login"  onclick="wsp()">Back</button>
   
