--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -18,7 +18,7 @@
       height: 90%;
     }
     .box {
-    	background: linear-gradient(180deg, #d9d9d9,#A18686);
+    	background: linear-gradient(180deg, #d9d9d9,#b6abab);
         padding: 50px;
         border-radius: 8px;
         box-sizing: border-box;
