--- a/templates/availability.html
+++ b/templates/availability.html
@@ -18,7 +18,7 @@
     .backing {
         border-radius: 6px;
         box-sizing: border-box;
-    	  background: linear-gradient(180deg, #d9d9d9,#A18686);
+    	  background: linear-gradient(180deg, #d9d9d9,#b6abab);
         padding: 10px;
         margin: 10px;
         display: flex;
