--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="lightmode.js" defer></script>
 <title>Home</title>
 <style>
+:root{
+--base-color: linear-gradient(180deg, #360000, black);
+--text-color: white;
+--buttoncolor:#B51111;
+--fill-color: #fff7f7;
+--base-variant: #ff2222;
+}
+
 body {
-background: linear-gradient(180deg, #360000, black);
+background: var(--base-color);
 font-family: "Monaco", monospace;
 display: flex;
 flex-direction: column;
@@ -15,15 +24,23 @@ margin: 0;
 height: 100vh;
 }
 
+.sunlight{
+--base-color: linear-gradient(180deg, #fff6eeff ,#ff5555);
+--text-color: black;
+--buttoncolor: #f1bfbf;
+--fill-color: #550000;
+--base-variant: #edbfbf;
+}
+
 h2 {
-color: white;
+color: var(--text-color);
 text-align: center;
 margin: 10px 0 30px;
 font-size: 40px;
 }
 
 .text {
-color: white;
+color: var(--text-color);
 font-size: 24px;
 margin-bottom: 40px;
 text-align: center;
@@ -68,8 +85,8 @@ animation-delay: 0.9s;
 }
 
 .button {
-background-color: #B51111;
-color: white;
+background-color: var(--buttoncolor);
+color: var(--text-color);
 padding: 12px 30px;
 border: none;
 border-radius: 6px;
@@ -77,7 +94,7 @@ font-size: 20px;
 cursor: pointer;
 font-weight: bold;
 text-align: center;
-box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+box-shadow: 0 4px 6px rgba(0,0,0,0.25);
 transition: transform 0.3s ease, box-shadow 0.3s ease;
 font-family: "Monaco", monospace;
 }
@@ -86,9 +103,41 @@ font-family: "Monaco", monospace;
 transform: scale(1.13);
 box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
+
+#theme-switch{
+height: 50px;
+width: 50px;
+padding: 0;
+border-radius: 50px;
+background-color: var(--base-variant);
+display: flex;
+justify-content: center;
+align-items:center;
+position: fixed;
+top: 20px;
+right: 20px;
+}
+#theme-switch svg{
+fill: var(--fill-color);
+}
+
+#theme-switch svg:last-child{
+display: none;
+}
+.sunlight #theme-switch svg:first-child{
+display: none;
+}
+
+.sunlight #theme-switch svg:last-child{
+display: block;
+}
 </style>
 </head>
-<body>
+<body class="sunlight">
+<button id="theme-switch">
+<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
+<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+</button>
 
 <h2>SMCS Symposium Scheduler</h2>
 <img src="https://imgur.com/4IWYffJ.png" alt="Logo" width="200" height="200">
