--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,6 @@
 --fill-color: #fff7f7;
 --base-variant: #ff2222;
 }
-  .sunlight{
---base-color: linear-gradient(180deg, #fff6eeff ,#ff5555);
---text-color: black;
---buttoncolor: #f1bfbf;
---fill-color: #550000;
---base-variant: #edbfbf;
-}
 
 body {
 background: var(--base-color);
@@ -31,7 +24,13 @@ margin: 0;
 height: 100vh;
 }
 
-
+.sunlight{
+--base-color: linear-gradient(180deg, #fff6eeff ,#ff5555);
+--text-color: black;
+--buttoncolor: #f1bfbf;
+--fill-color: #550000;
+--base-variant: #edbfbf;
+}
 
 h2 {
 color: var(--text-color);
@@ -134,7 +133,7 @@ display: block;
 }
 </style>
 </head>
-<body>
+<body class="sunlight">
 <button id="theme-switch">
 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
@@ -149,6 +148,7 @@ display: block;
 </div>
 </div>
 
+<h3>Let's get to W-E-R-K!</h3>
 <div class="button-container">
 <div class="button-wrapper">
 <button class="button" onclick="wsp()">Log In</button>
@@ -175,5 +175,6 @@ window.location.href = '/bugreport';
 }
 </script>
 
+<h4>Created by the CAPSLocked team: Pranavi Bhamidipati, Crest Highfill, Sherry Wang, Anna Zhou | SMCS 27</h4>
 </body>
 </html>
