--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,4 +1,5 @@
 <head>
+<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
     <style>
         .columnnumbers {
             width: 30px;
@@ -70,6 +71,10 @@
     p {
         font-size: 22px;
     }
+  
+  body{
+  font-family: 'Assistant', sans-serif;
+  }
 
 .columnnumbers {
 font-size: 22px; 
@@ -82,14 +87,25 @@ width:50px;
         cursor: pointer; /* Make it clickable */
     }
 
+.header {
+      background: linear-gradient(135deg, #B51111, #E53935); /* red gradient */
+      text-align: center;
+      padding: 1px ;
+      border-radius: 12px;
+      margin: 5px auto;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      font-size: 1.5 rem;
+    }
     
     </style>
 
 </head>
-<body style="margin: 20px;">
-    <h1 style="color:white; background-color:#B51111; text-align: center;">SMCS Symposium Schedule Generator</h1>
+<body style="margin: 20px; background-image:linear-gradient(180deg, #fff6eeff, #ffded9 );">
+<div class="header">
+    <h1 style="color:white;  text-align: center;">SMCS Symposium Schedule Generator</h1>
+    </div>
 
-    <h2 style="color:#B51111">Senior Responses - Add Spreadsheet</h2>
+    <h2 style="color:#750000">Senior Responses - Add Spreadsheet</h2>
     <p>Download the spreadsheet as a csv file and upload it here</p>
 
     <form id="uploadForm" enctype="multipart/form-data">
@@ -99,24 +115,24 @@ width:50px;
     <p>OR</p>
     
     <p>Make the spreadsheet public using a personal (non-MCPS) account and enter the link below</p>
-    <input id="spreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUTvl8O4D9cuNTR1MBYAu8CgRzM_sI6eK29hoPriy-4edUpz7YUSDL80wLqxBszu0RLV2YYMLgL3pK/pub?output=csv">
+    <input id="spreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUTvl8O4D9cuNTR1MBYAu8CgRzM_sI6eK29hoPriy-4edUpz7YUSDL80wLqxBszu0RLV2YYMLgL3pK/pub?output=csv">
     
     <br><br><br>
     <hr>
     <h2 style="color:#B51111">Senior Responses - Columns</h2>
     <p>Number of column containing...</p>
     <form id="columnForm1" class="container" id="columnForm" style="font-size: 22px;">
-        <p>Last name</p> <input type="number" id="lastName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="3">
-        <p>First name</p> <input type="number" id="firstName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="4">
-        <p>Name of project</p> <input type="number" id="projectName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="5">
-        <p>Project topic</p> <input type="number" id="projectTopic" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="6">
-        <p>Blurb about project</p> <input type="number" id="blurb" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="18">
+        <p>Last name</p> <input type="number" id="lastName" style="font-size: 22px;" class="columnnumbers" value="3">
+        <p>First name</p> <input type="number" id="firstName" style="font-size: 22px;" class="columnnumbers" value="4">
+        <p>Name of project</p> <input type="number" id="projectName" style="font-size: 22px;" class="columnnumbers" value="5">
+        <p>Project topic</p> <input type="number" id="projectTopic" style="font-size: 22px;" class="columnnumbers" value="6">
+        <p>Blurb about project</p> <input type="number" id="blurb" style="font-size: 22px;" class="columnnumbers" value="18">
     </form>
     <form id="columnForm2" class="container" id="columnForm" style="font-size: 22px;">
-        <p>Availability</p> <input type="number" id="availability" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="7">
+        <p>Availability</p> <input type="number" id="availability" style="font-size: 22px;" class="columnnumbers" value="7">
         <p>Presider of Choice</p> <input type="number" id="presider" class="columnnumbers" value="8">
-    	<p>Presider Introduction</p> <input type="number" id="presiderIntro" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="10">
-        <p>Presenting with friend(s)</p> <input type="number" id="friends" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="15">
+    	<p>Presider Introduction</p> <input type="number" id="presiderIntro" style="font-size: 22px;" class="columnnumbers" value="10">
+        <p>Presenting with friend(s)</p> <input type="number" id="friends" style="font-size: 22px;" class="columnnumbers" value="15">
     </form>
 
     <br>
@@ -133,17 +149,17 @@ width:50px;
     <p>OR</p>
     
     <p>Make the spreadsheet public using a personal (non-MCPS) account and enter the link below</p>
-    <input id="juniorSpreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ7CKfSEaLsaw7I5GanMCMe8fU6DvOY79LIOAE7PnvSebb9kY51aVsDNShD7oMG6KLs29b811ijnDx7/pub?gid=0&single=true&output=csv">
+    <input id="juniorSpreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ7CKfSEaLsaw7I5GanMCMe8fU6DvOY79LIOAE7PnvSebb9kY51aVsDNShD7oMG6KLs29b811ijnDx7/pub?gid=0&single=true&output=csv">
     
     <br><br><br>
     <hr>
     <h2 style="color:#B51111">Junior Responses - Columns</h2>
     <p>Number of column containing...</p>
     <form id="columnForm3" class="container" id="columnForm" style="font-size: 22px;">
-        <p>Last name</p> <input type="number" id="juniorLastName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="1">
-        <p>First name</p> <input type="number" id="juniorFirstName" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="2">
-        <p>Preferred Topics</p> <input type="number" id="juniorTopics" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="3">
-        <p>Availability</p> <input type="number" id="juniorAvailability" style="font-size: 22px; font-family: Times New Roman;" class="columnnumbers" value="4">
+        <p>Last name</p> <input type="number" id="juniorLastName" style="font-size: 22px;" class="columnnumbers" value="1">
+        <p>First name</p> <input type="number" id="juniorFirstName" style="font-size: 22px; " class="columnnumbers" value="2">
+        <p>Preferred Topics</p> <input type="number" id="juniorTopics" style="font-size: 22px; " class="columnnumbers" value="3">
+        <p>Availability</p> <input type="number" id="juniorAvailability" style="font-size: 22px; " class="columnnumbers" value="4">
     </form>
     <br>
     <hr>
@@ -152,7 +168,7 @@ width:50px;
     
     <h2 style="color:#B51111">Rooms</h2>
     <p>Enter each room the symposium will be held in on a separate line, using the same format as the text below.</p>
-    <textarea id="roomsInput" style="width:200px; font-size: 22px; font-family: Times New Roman;" rows="5">Room 195
+    <textarea id="roomsInput" style="width:200px; font-size: 22px;" rows="5">Room 195
 Room 198
 Room 199</textarea>
 
@@ -163,7 +179,7 @@ Room 199</textarea>
     <br>
     Days are separated by a single empty line.
     </p>
-    <textarea id="timesInput" style="width:400px; font-size: 22px; font-family: Times New Roman;" rows="15">PD 2, Tuesday, December 19th
+    <textarea id="timesInput" style="width:400px; font-size: 22px;" rows="15">PD 2, Tuesday, December 19th
 PD 3, Tuesday, December 19th
 PD 4, Tuesday, December 19th
 PD 5, Tuesday, December 19th
@@ -176,8 +192,8 @@ PD 5, Thursday, December 21st
 PD 6, Thursday, December 21st</textarea>
 
     <br><br>
-    <button id="parseData" style="width:200px; font-size: 22px; font-family: Times New Roman; margin-right: 20px;" rows="5" disabled="true" onclick="parseData()">View Parsed Data</button>
-    <button id="nextPage" style="width:200px; font-size: 22px; font-family: Times New Roman;" rows="5" disabled="true" onclick="nextPage()">Next</button>
+    <button id="parseData" style="width:200px; font-size: 22px; margin-right: 20px;" rows="5" disabled="true" onclick="parseData()">View Parsed Data</button>
+    <button id="nextPage" style="width:200px; font-size: 22px;" rows="5" disabled="true" onclick="nextPage()">Next</button>
     <p id="troubleshoot" style="display: none;">Problems with input will appear here.</p>
     <script>
         function checkInputs() {
