--- a/templates/logistics.html
+++ b/templates/logistics.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Google Sheets Link</title>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            background-color: black;
+            background-image:linear-gradient(180deg, #fff6eeff, #ffded9 );;
             display: flex;
             justify-content: center; /* vertical */
             flex-direction: column;
@@ -27,8 +28,9 @@
             margin: auto;
             max-width: 90vw;
             overflow-x: auto;
-            background-color: #D9D9D9;
+            background-color: #c6afaf;
             width: 80%;
+            border-radius: 12px;
         }
         table, th, td {
             border: 1px solid black;
@@ -44,12 +46,14 @@
           padding: 15px;
           width: 30%;
           border: none;
-          border-radius: 0;
+          border-radius: 12px;
           font-weight: bold;
           cursor: pointer;
         }
         .button:hover {
           background-color: #9f0f0f;
+          transition: transform 0.3s ease;
+          transform: scale(1.1);
         }
         input[type="text"] {
           width: 100px;
@@ -59,7 +63,6 @@
           background-color: #fff;
           color: #444;
           box-sizing: border-box;
-          font-family: Times New Roman;
         }
     </style>
 </head>
