--- a/templates/topicsByRoom.html
+++ b/templates/topicsByRoom.html
@@ -8,7 +8,7 @@
     	margin: 0;
         padding: 40px;
         display: flex;
-    	background-color: black;
+    	background-image:linear-gradient(180deg, #fff6eeff, #ffded9 );
         align-items: center;
         justify-content: center;
         font-family: 'Assistant', sans-serif;
@@ -26,7 +26,7 @@
 }
 
 .formContainer {
-  background-color: #D9D9D9;
+  background-color: #c6afaf;
   padding: 40px;
   width: 100%;      /* fill wrapper width */
   max-width: 600px; /* constrain max width */
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  border-radius: 12px;
   margin: 0 auto;   /* center inside wrapper */
 }
 .formContainer > * {
@@ -50,6 +51,7 @@
       width: 100%;
       background-color: #cb5151ff;
       text-align: center;
+      border-radius: 12px;
       }
       
     .topic-row { 
@@ -64,12 +66,13 @@
     }
 
 	.header{
-    	background-color: #580C1F;
+    	background-color:#7a2e41;
         text-align: center;
         color: white;
         width: 100%;
         font-family: Arial, sans-serif;
         padding: 10px;
+        border-radius: 12px;
     }
     
     button[type="submit"] {
@@ -82,12 +85,14 @@
       margin: 15px auto 0 auto;
       display: block;
       width: 100%;
+      border-radius: 12px;
       font-weight: bold;
       /* transition: background-color 0.3s ease, box-shadow 0.3s ease; */
     }
 
     button[type="submit"]:hover {
       background-color: #870c0cff;
+      transform: scale(1.1);
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
 
@@ -102,6 +107,7 @@
       cursor: pointer;
       display: flex;
       flex-direction: column;
+      border-radius: 2px;
       justify-content: space-between;
     }
 
@@ -121,6 +127,7 @@
       border: 1px solid #888;
       box-shadow: 0 0 10px rgba(0,0,0,0.4);
       width: 200px;
+      border-radius: 2px;
       z-index: 1000;
     }
 
@@ -131,6 +138,7 @@
       font-weight: bold;
       color: black;
       border-bottom: 1px solid #aaa;
+      border-radius: 2px;
     }
 
     .dropdown a:last-child {
@@ -140,6 +148,7 @@
 
     .dropdown a:hover {
       background-color: #ccc;
+      transform: scale(1.05);
     }
 
 #app {
