--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet" />
 
   <!-- Theme toggle logic -->
-  <script src="templates/lightmode.js" defer></script>
+  <script src="templates/js/lightmode.js" defer></script>
 
   <style>
     /* Theme Variables */
