--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
   <style>
     /* Theme Variables */
     :root {
-      --base-color: linear-gradient(180deg, #360000, black);
+      --base-color: linear-gradient(180deg, #360000, #130101);
       --text-color: white;
       --buttoncolor: #B51111;
       --fill-color: #fff7f7;
@@ -85,19 +85,25 @@
       justify-content: center;
       margin: 0;
       height: 100vh;
-      transition: background 0.5s ease, color 0.5s ease;
+      transition: background 1s ease, color 1.5s ease;
     }
 
-    h2, h3, .text {
+    h2, h3,h4, .text {
       color: var(--text-color);
       text-align: center;
+       transition: color 0.6s ease;
       margin: 10px 0;
     }
+
+ button {
+  transition: background-color 0.6s ease, color 0.9s ease;
+}
 
     h2 {
       font-size: 40px;
       margin-bottom: 30px;
     }
+    
 
     .text {
       font-size: 24px;
